Fix T45456: Error's in splash don't restore cursor